--- a/prenota/consulta.html
+++ b/prenota/consulta.html
@@ -91,8 +91,8 @@
         </div>
         <div class="row extra-space-hero" style="margin-bottom:10%">
             <div class="small-12 medium-6 large-6 columns">
-                <a role="button" id="cancel" class="button right">Cancella</a>
-                <a role="button" id="modify" class="button left">Modifica</a>
+                <a role="button" id="cancel" class="button left">Cancella</a>
+                <a role="button" id="modify" class="button right">Modifica</a>
                 <a role="button" id="new" class="button right" href="./">Fai una nuova prenotazione</a>
             <!-- <div class="medium-6 large-6 columns">
                 <a style="margin-top: 15px;" role="button" id="cancel" class="button">Cancella</a>
