--- a/prenota/consulta.html
+++ b/prenota/consulta.html
@@ -89,7 +89,7 @@
                 </fieldset>
             </div>
         </div>
-        <div class="row extra-space-hero" style="margin-bottom:10%">
+        <div class="row extra-space-hero" style="margin-bottom:4rem;">
             <div class="small-12 medium-6 large-6 columns">
                 <a role="button" id="cancel" class="button left">Cancella</a>
                 <a role="button" id="modify" class="button right">Modifica</a>
@@ -190,7 +190,7 @@
     <div id="myModal" class="reveal-modal" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
         <p id="modalText"></p>
             <div class="row">
-                <div class="small-12 medium-12 large-12 columns extra-space" style="margin-bottom:10%">
+                <div class="small-12 medium-12 large-12 columns extra-space" style="margin-bottom:4rem;">
                     <p class="lead" id="modalLead">Vuoi cancellare la prenotazione?</p>
                     <a role="button" id="no" class="button small right" style="margin-top: 5px;">No, non cancellare</a>
                     <a role="button" id="yes" class="button small left" style="margin-top: 5px;">Sì, cancella</a>
