update email text color and button hover color

--- a/prenota/email_template.html
+++ b/prenota/email_template.html
@@ -85,12 +85,12 @@ a[x-apple-data-detectors='true'] {
   text-decoration: none !important;
 }
 
-table, td { color: #000000; } a { color: #0000ee; text-decoration: underline; } @media (max-width: 480px) { #u_content_heading_1 .v-line-height { line-height: 300% !important; } #u_content_text_1 .v-line-height { line-height: 150% !important; } #u_content_button_1 .v-button-colors { color: #FFFFFF !important; background-color: #e00c10 !important; } #u_content_button_1 .v-button-colors:hover { color: #FFFFFF !important; background-color: #3AAEE0 !important; } #u_content_button_1 .v-line-height { line-height: 140% !important; } #u_content_button_1 .v-padding { padding: 10px 20px !important; } }
+table, td { color: #222222; } a { color: #0000ee; text-decoration: underline; } @media (max-width: 480px) { #u_content_heading_1 .v-line-height { line-height: 300% !important; } #u_content_text_1 .v-line-height { line-height: 150% !important; } #u_content_button_1 .v-button-colors { color: #FFFFFF !important; background-color: #e00c10 !important; } #u_content_button_1 .v-button-colors:hover { color: #FFFFFF !important; background-color: #86070a !important; } #u_content_button_1 .v-line-height { line-height: 140% !important; } #u_content_button_1 .v-padding { padding: 10px 20px !important; } }
     </style>
 
 </head>
 
-<body class="clean-body u_body" style="margin: 0;padding: 0;-webkit-text-size-adjust: 100%;background-color: #ffffff;color: #000000">
+<body class="clean-body u_body" style="margin: 0;padding: 0;-webkit-text-size-adjust: 100%;background-color: #ffffff;color: #222222">
   <!--[if IE]><div class="ie-container"><![endif]-->
   <!--[if mso]><div class="mso-container"><![endif]-->
   <table style="border-collapse: collapse;table-layout: fixed;border-spacing: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt;vertical-align: top;min-width: 320px;Margin: 0 auto;background-color: #ffffff;width:100%" cellpadding="0" cellspacing="0">
