--- a/prenota/index.html
+++ b/prenota/index.html
@@ -81,9 +81,9 @@
                 </label>
             </div>
         </div>
-        <div class="small-12 medium-12 large-12 columns extra-space" id="innerNotesDiv" style="overflow-x:auto;">
+        <div class="small-12 medium-12 large-12 columns" id="innerNotesDiv" style="overflow-x:auto;">
             <table id="shiftsTable">
-                <caption class="text-left">Numero persone per turno</caption>
+                <caption class="text-left extra-space">Numero persone per turno</caption>
                 <thead>
                     <tr>
                         <th>Turno</th>
