--- a/prenota/index.html
+++ b/prenota/index.html
@@ -68,8 +68,7 @@
         </div>
     </header>
 <!-- inizio loader -->
-    <div id="loading" hidden><br/><br/>
-        <div style="padding-top:25%">Ricerco disponibilità</div>
+    <div id="loading" hidden>
     </div>
 <!-- fine loader -->
 <!-- inizio dashboard -->
