fix wrong div closure and li

--- a/asporto/index.html
+++ b/asporto/index.html
@@ -427,11 +427,8 @@
 	                	</ul>
 					</li>
 				</ul>
-			<div>
-		<div>
-    </footer>
-     <footer class="panel-hr">
-        <hr>
+			</div>
+		</div>
     </footer>
 <!-- fine footer -->
 <!-- inizio navbar footer -->
