--- a/index.html
+++ b/index.html
@@ -157,7 +157,6 @@
 			</div>
 		</div>
 	</div>
-
 	<div class="panel-home-n">
 		<div class="row">
 			<div class="medium-6 large-6 columns">
@@ -252,8 +251,8 @@
 						</ul>
 					</li>
 				</ul>
-			<div>
-		<div>
+			</div>
+		</div>
 	</footer>
 <!-- fine footer -->
 <!-- inizio navbar footer -->
