--- a/prenota/consulta.html
+++ b/prenota/consulta.html
@@ -73,8 +73,8 @@
                 <fieldset>
                      <legend id="tlegend">Dettaglio prenotazione </legend>
                         <ul class="no-bullet" id="infoList">
-                          <li><strong>Nome: </strong><span id="name"></span></li>
-                          <li><strong>Telefono: </strong><span id="telephone"></span></li>
+                            <li><strong>Nome: </strong><span id="name"></span></li>
+                            <li><strong>Telefono: </strong><span id="telephone"></span></li>
                             <li><strong>Email: </strong><span id="email"></span></li>
                             <br>
                             <li><strong>Quale giorno: </strong><span id="day"></span></li>
@@ -101,6 +101,7 @@
                 <a style="margin-top: 15px;" role="button" id="modify" class="button">Modifica</a>
                 <a style="margin-top: 15px;" role="button" id="new" class="button left" href="./">Fai una nuova prenotazione</a>
             </div> -->
+            </div>
         </div>
     </div>
 
@@ -114,7 +115,6 @@
 						<p><a href="https://www.beerstrot.it/prenota/">Riserva un Tavolo</a></p>
                         <p><a href="tel:+390718853384"><i class="fa fa-phone"></i><span itemprop="telephone"> 071 8853384</span></a></p>
                     </li>
-					</li>
 		  			<!-- <li>
                        	<h4 class="subheader">Orari</h4>
                        	<meta itemprop="openingHours" content="Th, Fr, Sa, Su 19:00-23:00">
@@ -162,11 +162,8 @@
 	                	</ul>
 					</li>
 				</ul>
-			<div>
-		<div>
-    </footer>
-     <footer class="panel-hr">
-        <hr>
+			</div>
+		</div>
     </footer>
 <!-- fine footer -->
 <!-- inizio navbar footer -->
