--- a/prenota/index.html
+++ b/prenota/index.html
@@ -252,7 +252,6 @@
 						<p><a href="https://www.beerstrot.it/prenota/">Riserva un Tavolo</a></p>
                         <p><a href="tel:+390718853384"><i class="fa fa-phone"></i><span itemprop="telephone"> 071 8853384</span></a></p>
                     </li>
-					</li>
 		  			<!-- <li>
                        	<h4 class="subheader">Orari</h4>
                        	<meta itemprop="openingHours" content="Th, Fr, Sa, Su 19:00-23:00">
@@ -300,11 +299,8 @@
 	                	</ul>
 					</li>
 				</ul>
-			<div>
-		<div>
-    </footer>
-     <footer class="panel-hr">
-        <hr>
+			</div>
+		</div>
     </footer>
 <!-- fine footer -->
 <!-- inizio navbar footer -->
