wording and layout improvement

--- a/prenota/index.html
+++ b/prenota/index.html
@@ -324,7 +324,7 @@
     <script src="https://npmcdn.com/flatpickr/dist/l10n/it.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
     <script src="https://unpkg.com/just-validate@latest/dist/just-validate.production.min.js"></script>
-    <script src="https://www.beerstrot.it/js/prenota.min.js"></script>
+    <script src="../js/prenota.js"></script>
 <!-- inizio modale messaggio locale completo -->
     <div id="myModal" class="reveal-modal medium" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
         <div class="row">
@@ -340,8 +340,8 @@
             <div class="row">
                 <div class="small-12 medium-12 large-12 columns extra-space" style="margin-bottom:10%">
                     <p class="lead extra-space" id="modalLead2">Vuoi inviare il promemoria della prenotazione ai clienti?</p>
-                    <a role="button" id="no" class="button small right" style="margin-top: 5px;">No, non inviare</a>
-                    <a role="button" id="yes" class="button small left" style="margin-top: 5px;">Sì, Invia</a>
+                    <a role="button" id="no" class="button small tiny right" style="margin-top: 5px;">No, non inviare</a>
+                    <a role="button" id="yes" class="button small tiny left" style="margin-top: 5px;">Sì, Invia</a>
                 </div>
             </div>
             <a class="close-reveal-modal" aria-label="Close" id="close-modal">&#215;</a>
