--- a/prenota/index.html
+++ b/prenota/index.html
@@ -335,7 +335,7 @@
         <a class="close-reveal-modal" aria-label="Close">&#215;</a>
     </div>
 <!-- fine modale messaggio locale completo -->
-<!-- inizio modale invio promemoria ai clienti -->
+<!-- inizio modale invio promemoria ai clienti e aggiungere/rimuovere giorni chiusura-->
     <div id="myModal2" class="reveal-modal" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
             <div class="row">
                 <div class="small-12 medium-12 large-12 columns extra-space" style="margin-bottom:10%">
@@ -346,6 +346,6 @@
             </div>
             <a class="close-reveal-modal" aria-label="Close" id="close-modal">&#215;</a>
     </div>
-<!-- fine modale invio promemoria ai clienti -->
+<!-- fine modale invio promemoria ai clienti e aggiungere/rimuovere giorni chiusura-->
 </body>
 </html>
